fix: adjust CTA alignment for button and update features layout for small screens

--- a/src/styles/components/cta.scss
+++ b/src/styles/components/cta.scss
@@ -39,12 +39,11 @@
     margin: 0 auto;
     text-align: center !important;
 
-    a {
-      align-self: center;
-    }
-    
     @include medium {
       text-align: left !important;
+      p:has(a.button) {
+        align-self: center;
+      }
     }
   }
   &__bottom {
