--- a/src/styles/components/features.scss
+++ b/src/styles/components/features.scss
@@ -35,7 +35,8 @@
       min-height: unset;
     }
     @include small {
-      grid-template-columns: 1fr;
+      display: flex;
+      flex-direction: column;
     }
   }
   &__item {
